--- a/pages/create-order/index.wxml
+++ b/pages/create-order/index.wxml
@@ -6,7 +6,7 @@
                 <view>{{userData.nickName}}</view>
                 <view class="lv-box">
                     <view class="lv-text">LV {{item.skillLevel || 1}}</view>
-                    <image src="../../images/icon/lv.png" class="lv2" style="margin-left:12rpx"></image>
+<!--                    <image src="../../images/icon/lv.png" class="lv2" style="margin-left:12rpx"></image>-->
                 </view>
 
             </view>
