--- a/pages/create-order/index.wxml
+++ b/pages/create-order/index.wxml
@@ -3,7 +3,7 @@
         <view class="userInfo">
             <image src="{{userData.trainerImg}}" class="avatar"></image>
             <view class="nickName">
-                <view>{{userData.nickName}}</view>
+                <view>{{userData.name}}</view>
                 <view class="lv-box">
                     <view class="lv-text">LV {{item.skillLevel || 1}}</view>
                     <!--                    <image src="../../images/icon/lv.png" class="lv2" style="margin-left:12rpx"></image>-->
@@ -15,12 +15,20 @@
             <!--            中间断层-->
         </view>
         <view class="choose-list">
-            <view class="row" bindtap="selectStadium">
-                <view style="min-width:180rpx;">选择场地</view>
-                <view class="txt cutTxt1 {{showData.stadium?'txtColor':''}}">
-                    {{showData.stadium || '请选择场馆 '}} >
+
+            <!--<view style="min-width:180rpx;">选择场地</view>-->
+            <!--<view class="txt cutTxt1 {{showData.stadium?'txtColor':''}}">-->
+            <!--{{showData.stadium || '请选择场馆 '}} >-->
+            <!--</view>-->
+
+            <view class="row">
+                <view>选择时间段</view>
+                <view class="txt {{showData.QuanTime?'txtColor':''}}">
+                    {{userData.yeCategoryName+'-'+userData.parentName+'-'+userData.categoryName}}
+
                 </view>
             </view>
+
             <view class="row" bindtap="chooseTime">
                 <view>选择时间段</view>
                 <view class="txt {{showData.QuanTime?'txtColor':''}}">
@@ -37,24 +45,24 @@
             <view class="row">
                 <view>支付方式</view>
                 <view class="txt2">
-                  <radio-group bindchange="selectPayType">
-                    <radio value="0" checked>零钱支付</radio>
-                    <radio value="1">微信支付</radio>
-                  </radio-group>
+                    <radio-group bindchange="selectPayType">
+                        <radio value="0" checked>零钱支付</radio>
+                        <radio value="1">微信支付</radio>
+                    </radio-group>
                 </view>
             </view>
         </view>
         <view class="line">
             <!--            中间断层-->
         </view>
-        <view class="text">
-            <view style="margin-bottom:20rpx;">温馨提示</view>
+        <!--<view class="text">-->
+            <!--<view style="margin-bottom:20rpx;">温馨提示</view>-->
 
-            <view>1、陪练人员路费处理办法：{{'<3km'}}免路费，{{ '>3km'}}陪练人可根据当日实际打车票据或凭证找您报销
-            </view>
-            <view style="margin:20rpx 0;">2、请仔细阅读相关法律法规，避免造成人员损失或财产损失</view>
-            <view>3、陪练人员到场后，会要求用户出示短信验证码，请及时查看手机信息提示，避免错过订单。</view>
-        </view>
+            <!--<view>1、陪练人员路费处理办法：{{'<3km'}}免路费，{{ '>3km'}}陪练人可根据当日实际打车票据或凭证找您报销-->
+            <!--</view>-->
+            <!--<view style="margin:20rpx 0;">2、请仔细阅读相关法律法规，避免造成人员损失或财产损失</view>-->
+            <!--<view>3、陪练人员到场后，会要求用户出示短信验证码，请及时查看手机信息提示，避免错过订单。</view>-->
+        <!--</view>-->
     </view>
     <view class="foot-btn">
         <view class="flex-center">
