--- a/pages/bankList/index.wxss
+++ b/pages/bankList/index.wxss
@@ -1,55 +1,61 @@
 
-page{
+page {
     background: #fff;
-    height:100%;
+    height: 100%;
 }
 
-.container{
-    padding:76rpx 32rpx 0;
-    display:flex;
+.container {
+    padding: 76rpx 32rpx 0;
+    display: flex;
     flex-direction: column;
 
 }
 
-.content-box{
-    position:relative;
+.content-box {
+    position: relative;
     padding: 32rpx 48rpx 0 60rpx;
-    font-size:24rpx;
-    color:#fff;
+    font-size: 24rpx;
+    color: #fff;
     margin-bottom: 48rpx;
     min-height: 280rpx;
-    box-sizing:border-box;
-    border-radius:10rpx;
-}
-.content-box .bg{
-    height:280rpx;
-    width:100%;
-    position: absolute;
-    top:0;
-    left:0;
-    z-index:-1;
+    box-sizing: border-box;
+    border-radius: 10rpx;
+    background: #4A95FC;
 }
 
-.my-price{
-    margin-top:12rpx;
+.content-box .bg {
+    height: 280rpx;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
- .my-price .title{
+
+.my-price {
+    margin-top: 12rpx;
+}
+
+.my-price .title {
 
     padding-left: 8rpx;
-    display:flex;
-     align-items: center;
+    display: flex;
+    align-items: center;
 }
-.bank{
- width:80rpx;
-    height:80rpx;
+
+.bank {
+    width: 80rpx;
+    height: 80rpx;
+    margin-right: 10rpx;
 }
-.my-price .price{
-    color:#fff;
-    font-size:24rpx;
+
+.my-price .price {
+    color: #fff;
+    font-size: 24rpx;
     font-weight: 700;
 
     margin-top: 16rpx;
-    margin-left:100rpx;
+    margin-left: 100rpx;
     padding: 0;
 }
 
