--- a/pages/order/orderDetail/detail.wxml
+++ b/pages/order/orderDetail/detail.wxml
@@ -6,7 +6,7 @@
             <text>{{orderData.statusText}}</text>
         </view>
         <view style="color:#fff;font-size:24rpx;">
-            <text>等待陪练师到达场馆 19:00</text>
+            <text>等待授课师到达场馆 19:00</text>
             <text>验证码: 889900</text>
         </view>
     </view>
@@ -42,11 +42,11 @@
 
             <view class="order-price">
                 <view class="flex-box flex-space flex-y-center">
-                    <text>羽毛球陪练 {{orderData.timeCount}}小时</text>
+                    <text>羽毛球授课 {{orderData.timeCount}}小时</text>
                     <text>¥{{orderData.amount}}</text>
                 </view>
                 <view class="flex-box flex-space flex-y-center" style="margin-top:28rpx">
-                    <text>羽毛球陪练 {{orderData.timeCount}}小时</text>
+                    <text>羽毛球授课 {{orderData.timeCount}}小时</text>
                     <view bindtap="openLocationAddress">
                         <image src="../../../images/icon/pos.png" class="pos"></image>
                         <text>导航</text>
