--- a/pages/createOrder/index.wxml
+++ b/pages/createOrder/index.wxml
@@ -46,7 +46,7 @@
                 <view>支付方式</view>
                 <view class="txt2">
                     <radio-group bindchange="selectPayType">
-                        <radio value="0" checked>零钱支付</radio>
+                        <radio value="0" checked style="margin-right:12rpx;">零钱支付</radio>
                         <radio value="1">微信支付</radio>
                     </radio-group>
                 </view>
@@ -58,10 +58,10 @@
         <!--<view class="text">-->
             <!--<view style="margin-bottom:20rpx;">温馨提示</view>-->
 
-            <!--<view>1、陪练人员路费处理办法：{{'<3km'}}免路费，{{ '>3km'}}陪练人可根据当日实际打车票据或凭证找您报销-->
+            <!--<view>1、授课人员路费处理办法：{{'<3km'}}免路费，{{ '>3km'}}授课人可根据当日实际打车票据或凭证找您报销-->
             <!--</view>-->
             <!--<view style="margin:20rpx 0;">2、请仔细阅读相关法律法规，避免造成人员损失或财产损失</view>-->
-            <!--<view>3、陪练人员到场后，会要求用户出示短信验证码，请及时查看手机信息提示，避免错过订单。</view>-->
+            <!--<view>3、授课人员到场后，会要求用户出示短信验证码，请及时查看手机信息提示，避免错过订单。</view>-->
         <!--</view>-->
     </view>
     <view class="foot-btn">
@@ -79,7 +79,7 @@
         <view class="content">
             <view class="flex-box flex-space flex-y-center skill-title">
                 <image src="../../images/icon/cancel2.png" class="cancel" bindtap="closeModal1"></image>
-                <view style="font-weight:700">选择陪练时间段</view>
+                <view style="font-weight:700">选择授课时间段</view>
                 <view class="sure" bindtap="closeModal" data-choose="chooseSkill">确定</view>
             </view>
             <view>
