--- a/pages/mybag/account-detail/index.wxml
+++ b/pages/mybag/account-detail/index.wxml
@@ -36,7 +36,7 @@
         <!--        amount: 100-->
         <!--        createTime: "2020-08-28 10:25:27"-->
         <!--        id: 40-->
-        <!--        title: "陪练提现"-->
+        <!--        title: "授课提现"-->
         <!--        titleCode: 2-->
         <!--        transferOrderCode: "1299171201113001984"-->
         <!--        type: 2-->
