--- a/pages/to-trainer/step-three/step-three.wxml
+++ b/pages/to-trainer/step-three/step-three.wxml
@@ -98,7 +98,7 @@
         <view class="content">
             <view class="flex-box flex-space flex-y-center skill-title">
                 <image src="../../../images/icon/cancel2.png" class="cancel" bindtap="closeModal"></image>
-                <view style="font-weight:700">选择陪练时间</view>
+                <view style="font-weight:700">选择授课时间</view>
                 <view class="sure" bindtap="closeModal" data-choose="chooseSkill">确定</view>
             </view>
             <view class="weak-list" >
