--- a/pages/user/user.wxss
+++ b/pages/user/user.wxss
@@ -22,7 +22,7 @@ page {
 }
 .header {
 
-    height: 504rpx;
+    height: 404rpx;
 }
 
 .userInfo {
@@ -74,6 +74,8 @@ page {
     min-height: 400rpx;
     flex: 1;
     padding:0 32rpx;
+    display:flex;
+    flex-direction: column;
 }
 
 .content .list {
@@ -96,6 +98,11 @@ page {
     flex-direction: column;
     margin-top: 30rpx;
     background-color:#fff;
+    justify-content: flex-start;
+    flex:1;
+    border-radius: 12rpx;
+    margin-bottom:20rpx;
+
 }
 
 .settingList .list-row {
@@ -103,6 +110,7 @@ page {
     align-items: center;
     padding: 0 30rpx;
     border-radius: 16rpx;
+
 }
 
 .settingList .list-row .left-png {
